2004-09-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_sb_view.c (has_rc_file): new function to check
	scrollbar has 'rc' file.

2004-09-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c(iiimf_best_match_index): select default language
	automatically. (according to current locale)

2004-09-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c: cleaned up.

	* tool/mlconfig/po/POTFILES.in: mc_xim -> mc_im.c.

	* tool/mlconfig/po/mlconfig.pot, tool/mlconfig/po/ja.po: updated.

2004-09-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c(preedit_pushback): fixed a segfault in
	encoding conversion.

2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/im_iiimf.c, inputmethod/uim/im_uim.c, x_im.c:
	- initialized the common object in x_im_new().
	- minor cleanups.

	* x_im.h: increased IM_API_VERSION.

2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in: fixed typo.

2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* etc/Makefile.in: removed uim.

2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in: added output to show how you configured mlterm.

	* updated config.sub (timestamp='2004-06-24')
	* updated config.guess (timestamp='2004-08-13')

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1: fixed typo.

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1: fixed typo.

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_im.c, x_main_config.c, x_screen.c, tool/mlconfig/mc_im.c:
	allowed "input_method=none".

	* man/mlterm.1: updated. (--im=none)

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c, tool/mlconfig/Makefile.in:
	- get available conversion engines from libuim directly.
	- added IIIMF support.

	* man/mlterm.1: added IIIMF related things into 'GUI CONFIGURATOR'
	section.

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* etc/uim: removed

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1:
	- removed xim_open_in_startup.